Fix height bug. Add a TODO about layout shift

--- a/style.css
+++ b/style.css
@@ -22,16 +22,17 @@ body {
 
 h1, h2 {
   color: white;
-  padding: 1.5rem 2rem 1rem;
 }
 
 h1 {
+  padding: 2rem 2rem 0;
   text-align: center;
   font-size: 2rem;
   font-weight: bold;
 }
 
 h2 {
+  padding: 1.5rem 2rem 1rem;
   font-size: 1.5rem;
 }
 
@@ -74,6 +75,7 @@ a:visited {
 .contact h2 {
   color: #200003;
   font-weight: normal;
+  padding-bottom: 0;
 }
 .contact a {
   font-size: 1.5rem;
@@ -81,7 +83,6 @@ a:visited {
 }
 
 .tab-container {
-  min-height: 30vh;
   margin-bottom: 1.5rem;
   background-color: rgba(255, 255, 255, 0.4);
   display: flex;
@@ -110,20 +111,22 @@ a:visited {
   background-color: rgba(255, 255, 255, 0.9);
 }
 .tab-container .tab-panels {
-  flex-grow: 1;
+  display: flex;
+  flex-flow: column nowrap;
   background-color: rgba(255, 255, 255, 0.9);
 }
 .tab-container .tab-panels .tab-panel {
-  position: absolute;
   padding: 1rem 2rem 2rem;
-  display: flex;
-  flex-flow: column nowrap;
   width: 100%;
   /* hide non-active nested tab content */
 }
+.tab-container .tab-panels .tab-panel.active-tab-panel {
+  order: -1;
+}
 .tab-container .tab-panels .tab-panel:not(.active-tab-panel) {
-  opacity: 0;
+  display: none;
   z-index: -1;
+  order: initial;
 }
 
 /*# sourceMappingURL=style.css.map */
